--- a/EchoServer/packages/server/package.json
+++ b/EchoServer/packages/server/package.json
@@ -3,14 +3,14 @@
     "main": "./dist/server.js",
     "files": [],
     "scripts": {
-        "start": "node --require ts-node/register src/server.ts",
+        "debug": "node --require ts-node/register --inspect-brk=5870 ./src/main.ts --port=8080 --host=127.0.0.1",
         "build": "rm -rf ./dist && webpack --config ./webpack.config.js",
-        "debug": "node --inspect-brk=5870 ./dist/main.js --port=8080 --host=127.0.0.1",
-        "run": "node ./dist/main.js --port=8080 --host=127.0.0.1"
+        "start": "node ./dist/main.js --port=8080 --host=127.0.0.1"
     },
     "devDependencies": {
         "@types/node": "^12.0.8",
         "ts-loader": "^6.0.2",
+        "ts-node": "^8.2.0",
         "typescript": "^3.5.1",
         "webpack": "^4.34.0",
         "webpack-cli": "^3.3.4"
