--- a/EchoServer/packages/server/package.json
+++ b/EchoServer/packages/server/package.json
@@ -3,12 +3,14 @@
     "main": "./dist/server.js",
     "files": [],
     "scripts": {
-        "debug": "node --require ts-node/register --inspect-brk=5870 ./src/main.ts --port=8080 --host=127.0.0.1",
-        "build": "rm -rf ./dist && webpack --config ./webpack.config.js",
+        "debug": "cross-env NODE_ENV=development node --require ts-node/register --inspect=5870 ./src/main.ts --port=8080 --host=127.0.0.1",
+        "debug:brk": "cross-env NODE_ENV=development node --require ts-node/register --inspect-brk=5870 ./src/main.ts --port=8080 --host=127.0.0.1",
+        "build": "rm -rf ./dist && cross-env NODE_ENV=production webpack --config ./webpack.config.js",
         "start": "node ./dist/main.js --port=8080 --host=127.0.0.1"
     },
     "devDependencies": {
         "@types/node": "^12.0.8",
+        "cross-env": "^5.2.0",
         "ts-loader": "^6.0.2",
         "ts-node": "^8.2.0",
         "typescript": "^3.5.1",
@@ -21,6 +23,8 @@
         "express": "^4.17.1",
         "express-static-gzip": "^1.1.3",
         "httpolyglot": "^0.1.2",
+        "webpack-dev-middleware": "^3.7.0",
+        "webpack-hot-middleware": "^2.25.0",
         "ws": "^7.0.0"
     }
 }
