--- a/EchoServer/packages/server/package.json
+++ b/EchoServer/packages/server/package.json
@@ -6,7 +6,7 @@
         "debug": "cross-env NODE_ENV=development node --require ts-node/register --inspect=5870 ./src/main.ts --port=8080 --host=127.0.0.1",
         "debug:brk": "cross-env NODE_ENV=development node --require ts-node/register --inspect-brk=5870 ./src/main.ts --port=8080 --host=127.0.0.1",
         "build": "rm -rf ./dist && cross-env NODE_ENV=production webpack --config ./webpack.config.js",
-        "start": "node ./dist/main.js --port=8080 --host=127.0.0.1"
+        "start": "cross-env NODE_ENV=production node ./dist/main.js --port=8080 --host=127.0.0.1"
     },
     "devDependencies": {
         "@types/node": "^12.0.8",
